# newsy

./: Cargo.toml  Rocket.toml  rustfmt.toml
migrations/2019-06-23-101512_initial/: down.sql  up.sql
src/: data.rs  feed_overview.sql  fetch.rs  insert_feed.sql  main.rs
static/: newsy.css
templates/: index.html.tera
