[package]
name = "newsy"
version = "0.1.0"
authors = ["Emmanuel Boudreault <emmanuel.boudreault@polymtl.ca>"]
edition = "2018"

[[bin]]
name = "web"
path = "src/main.rs"

[[bin]]
name = "fetch"
path = "src/fetch.rs"

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
rss = { version = "1.8", features = ["from_url"] }
rocket_contrib = { version = "0.4", default-features = false, features = ["tera_templates", "diesel_postgres_pool", "serve"] }
